--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        style="@style/Base.Widget.AppCompat.Toolbar"/>
+    <android.support.v7.widget.Toolbar android:id="@+id/toolbar" style="@style/ToolBar" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/demo"
+        android:layout_centerInParent="true"
+        android:text="save dummy list for testing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
