--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,40 @@
 
     <android.support.v7.widget.Toolbar android:id="@+id/toolbar" style="@style/ToolBar" />
 
-    <Button
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_below="@id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="7"
+            />
+
+        <FrameLayout
+            android:layout_weight="1"
+            android:background="@color/splash_intro"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+            <TextView
+                android:text="@string/new_list"
+                android:textSize="20sp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent" />
+        </FrameLayout>
+    </LinearLayout>
+
+   <!-- <Button
         android:id="@+id/demo"
         android:layout_centerInParent="true"
         android:text="save dummy list for testing"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
 
 </RelativeLayout>
