--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,11 +17,12 @@
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="7"
-            />
+            android:layout_weight="7"/>
 
         <FrameLayout
             android:layout_weight="1"
+            android:clickable="true"
+            android:id="@+id/new_list_button"
             android:background="@color/splash_intro"
             android:layout_width="match_parent"
             android:layout_height="0dp">
@@ -34,7 +35,10 @@
                 android:layout_height="match_parent" />
         </FrameLayout>
     </LinearLayout>
-
+    <FrameLayout
+        android:id="@+id/fragment_holder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
    <!-- <Button
         android:id="@+id/demo"
         android:layout_centerInParent="true"
